# trashmap

./: .travis.yml  Cargo.toml  README.md
examples/: recursion.rs
src/: lib.rs
