[package]
name = "trashmap"
version = "0.1.1"
authors = ["Manish Goregaokar <manishsmail@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "A HashMap and HashSet that operate directly on hashes instead of keys, avoiding rehashing"
documentation = "https://docs.rs/trashmap/"
repository = "https://github.com/manishearth/trashmap"

[dependencies]
